--- a/Facturacion Telco/Facturacion Telco/Facturacion Telco.vbproj
+++ b/Facturacion Telco/Facturacion Telco/Facturacion Telco.vbproj
@@ -73,6 +73,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientForm.Designer.vb">
+      <DependentUpon>ClientForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ClientForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="config.Designer.vb">
       <DependentUpon>config.vb</DependentUpon>
     </Compile>
@@ -101,6 +107,18 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="NewFactForm.Designer.vb">
+      <DependentUpon>NewFactForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="NewFactForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VewFactForm.Designer.vb">
+      <DependentUpon>VewFactForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="VewFactForm.vb">
+      <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
